test/fails/bad_tags/dot.lgl
tag model is vec<3>;
tag world is vec<3>;

declare float dot(vec3 v1, vec3 v2);

void main() {
    model aPos = [1., 0., 0.];
    world lightPos = [0., 1., 0.];
    float bad = dot(aPos, lightPos);
    print bad;
}